--- a/spec/fixtures/cassettes/forecast_festus_mo.yml
+++ b/spec/fixtures/cassettes/forecast_festus_mo.yml
@@ -58,4 +58,61 @@ http_interactions:
         a day of partly cloudy with rain","temp":{"day":79.29,"min":63.18,"max":79.29,"night":69.15,"eve":72,"morn":63.18},"feels_like":{"day":79.29,"night":69.15,"eve":72.32,"morn":63.75},"pressure":1012,"humidity":61,"dew_point":64.62,"wind_speed":16.78,"wind_deg":168,"wind_gust":38.21,"weather":[{"id":500,"main":"Rain","description":"light
         rain","icon":"10d"}],"clouds":100,"pop":1,"rain":3.51,"uvi":1}]}'
   recorded_at: Tue, 09 Apr 2024 19:54:46 GMT
+- request:
+    method: get
+    uri: https://api.openweathermap.org/data/3.0/onecall?appid=8aecc53d82c60c21e09b05c2135704ba&exclude=minutely,hourly,alerts&lat=38.2207&lon=-90.396&units=imperial
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.9.0
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - openresty
+      Date:
+      - Wed, 10 Apr 2024 19:06:12 GMT
+      Content-Type:
+      - application/json; charset=utf-8
+      Content-Length:
+      - '4798'
+      Connection:
+      - keep-alive
+      X-Cache-Key:
+      - "/data/3.0/onecall?exclude=minutely%2Chourly%2Calerts&lat=38.22&lon=-90.4&units=imperial"
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Access-Control-Allow-Methods:
+      - GET, POST
+    body:
+      encoding: UTF-8
+      string: '{"lat":38.2207,"lon":-90.396,"timezone":"America/Chicago","timezone_offset":-18000,"current":{"dt":1712775972,"sunrise":1712748728,"sunset":1712795573,"temp":56.5,"feels_like":56.5,"pressure":1008,"humidity":99,"dew_point":56.23,"uvi":0.37,"clouds":100,"visibility":10000,"wind_speed":8.46,"wind_deg":19,"wind_gust":17.6,"weather":[{"id":500,"main":"Rain","description":"light
+        rain","icon":"10d"}],"rain":{"1h":0.17}},"daily":[{"dt":1712772000,"sunrise":1712748728,"sunset":1712795573,"moonrise":1712752260,"moonset":1712805600,"moon_phase":0.07,"summary":"Expect
+        a day of partly cloudy with rain","temp":{"day":56.64,"min":53.29,"max":56.77,"night":54.03,"eve":54.41,"morn":54.32},"feels_like":{"day":56.61,"night":53.65,"eve":53.98,"morn":53.46},"pressure":1008,"humidity":98,"dew_point":56.08,"wind_speed":14.18,"wind_deg":25,"wind_gust":30.44,"weather":[{"id":501,"main":"Rain","description":"moderate
+        rain","icon":"10d"}],"clouds":100,"pop":1,"rain":10.41,"uvi":0.55},{"dt":1712858400,"sunrise":1712835041,"sunset":1712882029,"moonrise":1712840880,"moonset":1712896500,"moon_phase":0.11,"summary":"Expect
+        a day of partly cloudy with rain","temp":{"day":63.41,"min":50.11,"max":65.88,"night":50.11,"eve":55.78,"morn":51.55},"feels_like":{"day":62.19,"night":47.91,"eve":54.01,"morn":50.22},"pressure":1003,"humidity":58,"dew_point":48.33,"wind_speed":20.42,"wind_deg":306,"wind_gust":35.84,"weather":[{"id":501,"main":"Rain","description":"moderate
+        rain","icon":"10d"}],"clouds":100,"pop":1,"rain":5.99,"uvi":5.55},{"dt":1712944800,"sunrise":1712921354,"sunset":1712968485,"moonrise":1712929980,"moonset":0,"moon_phase":0.15,"summary":"Expect
+        a day of partly cloudy with clear spells","temp":{"day":61.48,"min":44.51,"max":64.24,"night":50.18,"eve":57.51,"morn":44.51},"feels_like":{"day":58.84,"night":48.09,"eve":55.63,"morn":38.61},"pressure":1019,"humidity":32,"dew_point":31.23,"wind_speed":17.83,"wind_deg":306,"wind_gust":34.4,"weather":[{"id":802,"main":"Clouds","description":"scattered
+        clouds","icon":"03d"}],"clouds":35,"pop":0,"uvi":5.92},{"dt":1713031200,"sunrise":1713007667,"sunset":1713054941,"moonrise":1713019500,"moonset":1712986980,"moon_phase":0.18,"summary":"Expect
+        a day of partly cloudy with clear spells","temp":{"day":77.43,"min":49.53,"max":80.44,"night":64.2,"eve":70.95,"morn":50.97},"feels_like":{"day":76.98,"night":63.14,"eve":70.11,"morn":49.48},"pressure":1017,"humidity":45,"dew_point":54.16,"wind_speed":12.88,"wind_deg":224,"wind_gust":29.21,"weather":[{"id":802,"main":"Clouds","description":"scattered
+        clouds","icon":"03d"}],"clouds":31,"pop":0,"uvi":6.39},{"dt":1713117600,"sunrise":1713093982,"sunset":1713141397,"moonrise":1713109380,"moonset":1713076920,"moon_phase":0.21,"summary":"Expect
+        a day of partly cloudy with rain","temp":{"day":79.48,"min":60.06,"max":82.83,"night":69.57,"eve":74.68,"morn":60.06},"feels_like":{"day":79.48,"night":69.89,"eve":74.89,"morn":59.43},"pressure":1011,"humidity":49,"dew_point":58.96,"wind_speed":11.48,"wind_deg":234,"wind_gust":32.61,"weather":[{"id":500,"main":"Rain","description":"light
+        rain","icon":"10d"}],"clouds":8,"pop":0.29,"rain":0.33,"uvi":6.46},{"dt":1713204000,"sunrise":1713180297,"sunset":1713227854,"moonrise":1713199560,"moonset":1713166260,"moon_phase":0.25,"summary":"Expect
+        a day of partly cloudy with rain","temp":{"day":84.06,"min":62.69,"max":84.56,"night":70.48,"eve":75.42,"morn":62.69},"feels_like":{"day":84.79,"night":71.04,"eve":76.05,"morn":63.09},"pressure":1011,"humidity":48,"dew_point":62.44,"wind_speed":12.06,"wind_deg":177,"wind_gust":26.69,"weather":[{"id":500,"main":"Rain","description":"light
+        rain","icon":"10d"}],"clouds":0,"pop":0.22,"rain":0.14,"uvi":0.11},{"dt":1713290400,"sunrise":1713266613,"sunset":1713314310,"moonrise":1713289740,"moonset":1713255060,"moon_phase":0.28,"summary":"You
+        can expect partly cloudy in the morning, with rain in the afternoon","temp":{"day":77.22,"min":68.09,"max":77.22,"night":68.09,"eve":69.78,"morn":68.61},"feels_like":{"day":77.45,"night":68.83,"eve":70.56,"morn":69.03},"pressure":1006,"humidity":60,"dew_point":62.04,"wind_speed":20.13,"wind_deg":179,"wind_gust":47.71,"weather":[{"id":500,"main":"Rain","description":"light
+        rain","icon":"10d"}],"clouds":100,"pop":1,"rain":4.23,"uvi":1},{"dt":1713376800,"sunrise":1713352929,"sunset":1713400767,"moonrise":1713379920,"moonset":1713343380,"moon_phase":0.31,"summary":"Expect
+        a day of partly cloudy with rain","temp":{"day":80.73,"min":67.66,"max":84.04,"night":73.71,"eve":76.23,"morn":68.04},"feels_like":{"day":81.59,"night":74.21,"eve":77.13,"morn":68.49},"pressure":1008,"humidity":51,"dew_point":61.05,"wind_speed":18.77,"wind_deg":196,"wind_gust":43.8,"weather":[{"id":500,"main":"Rain","description":"light
+        rain","icon":"10d"}],"clouds":0,"pop":1,"rain":2.07,"uvi":1}]}'
+  recorded_at: Wed, 10 Apr 2024 19:06:12 GMT
 recorded_with: VCR 6.2.0
